syntax = "proto3";

package com.nikitahohulia.nats.reqreply.user.get_by_id.proto;

option java_multiple_files = true;

import "com/nikitahohulia/nats/commonmodels/user/User.proto";

message DeleteUserByIdRequestCommon {
  string userId = 1;
}

message DeleteUserByIdResponseCommon {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {

  }

  message Failure {
    string message = 1;
  }
}
